style.css
<style>

<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 

html, body {touch-action: none;}
html, body {touch-action: pan-y;}

<!--avoid invisible text-->
@font-face {
  font-family: 'Pacifico';
  font-style: normal;
  font-weight: 400;
  src: local('Pacifico Regular'), local('Pacifico-Regular'), url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2) format('woff2');
  font-display: swap;
}

.padding {
  height: 53.5vw;
  max-height: 610px;
  position: relative;
  
}

.title {
  font-family: 'Pacifico', cursive;
  color: #dbdbdb;
  text-shadow: 0px 0px 10px #0e003e;
  font-size: min(max(4vw), 50px);
  text-align: center;
  margin-top: min(max(100px), 20%);
}

.radio {
  position: absolute;
  bottom: 15px;
  left: 25px;
}

.bottomtext {
  font-family: 'Pacifico', 'cursive';
  font-size: 200%;
  color: white;
  text-align: center;
  position: absolute;
  left: 350px;
  bottom: -20px;
}


body {
  background:url(https://raw.githubusercontent.com/Mestaritukki/homepage/main/media/jarvi3.webp)
  center center fixed no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-color: #080808;
}

</style>

